# document-parsing

./: Dockerfile  main.py  prototype.ipynb  pyproject.toml
