[project]
name = "document-parsing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black[jupyter]>=25.11.0",
    "markitdown[docx,pdf]>=0.1.4",
    "nltk>=3.9.2",
    "pdfminer-six>=20251107",
    "stanza>=1.11.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.26",
    "ruff>=0.14.8",
    "tomlq>=0.1.0",
]
